force-app/main/default/objects/Case/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>Buyer-selected reason for the cancellation request.</description>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong quantity</fullName>
            </value>
            <value>
                <fullName>Duplicate order</fullName>
            </value>
            <value>
                <fullName>Customer cancelled</fullName>
            </value>
            <value>
                <fullName>Pricing issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>