force-app/main/default/objects/Case/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>Order number for the cancellation request.</description>
    <label>Order Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>