force-app/main/default/objects/Case/fields/Order_Summary__c.field-meta.xml
<CustomField>
    <fullName>Order_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order Summary linked to this cancellation request.</description>
    <label>Order Summary</label>
    <referenceTo>OrderSummary</referenceTo>
    <relationshipLabel>Cancellation Requests</relationshipLabel>
    <relationshipName>Cancellation_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>